--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Patrol Manager</title>
+    <title>Patrol Manegement test Nav</title>
   </head>
-  <body class="sidebar-mini sidebar-collapse">
+  <body class="sidebar-mini sidebar-collapse sidebar-closed">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
