--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     -->
     <title>Patrol Manegement test Nav</title>
   </head>
-  <body class="sidebar-mini sidebar-collapse sidebar-closed">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
